fix: text-align justified

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -31,6 +31,7 @@ p ~ h2 {
 }
 
 p {
+  text-align: justify;
   line-height: 1.5rem;
 }
 
